--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,13 @@
             w = window.screen.availWidth;
             var s = Snap(w, h); //drawing board
             var x, y, width, height;
-            x = 0.05 * w;
-            y = 0.05 * h;
-            width = 0.9 * w;
-            height = 0.9 * h;
+            x = 0.1 * w;
+            y = 0.1 * h;
+            width = 0.8 * w;
+            height = 0.8 * h;
+
+            var s_width = 200;
+            var s_height = 100;
 
             var bigRect = s.rect(x, y, width, height) //our stuff
                 .attr({
@@ -30,7 +33,8 @@
                     strokeWidth: 5,
                     rx: 5,
                     ry: 5,
-                    id: "bigrect"
+                    id: "bigrect",
+                    opacity: 0.3
                 });
             //horizontal centre line
             var cLine = s.line(x, y + bigRect.attr("height") / 2, x + width, y + height / 2).attr({
@@ -39,28 +43,88 @@
                 id: "cline"
             }); // centre line. make invisible later
 
-            var cLine2 = s.line({});
-
             var spread = 50;
             var clipoff = 50;
-            var cnvBig = s.rect(cLine.attr("x1"), Number(cLine.attr("y1")) - spread * 1.3, width, spread * 2.6).attr({
+            var cnvBig = s.rect($("#cline").attr("x1"), Number(cLine.attr("y1")) - spread * 1.3, width, spread * 2.6).attr({
                 fill: "#000",
-                fill: "#dbcacc",
-                opacity: 0.7,
                 id: "cnvBig",
                 rx: 40,
                 ry: 40
             }); // -spread *k,,spread*k*2
-            //cnvBig.attr("x") + "50"
-            var cnvSm = s.rect(130, Number(cLine.attr("y1")) - spread / 2, width - 2 * clipoff, spread).attr({
+
+            var cnvSm = s.rect(Number($("#cnvBig").attr("x")) + clipoff, Number(cLine.attr("y1")) - spread / 2, width - 2 * clipoff, spread).attr({
                 fill: $("#bigrect").attr("fill"),
                 id: "cnvSm",
                 rx: 15,
                 ry: 15
             });
 
+            var cnv = s.group(cnvBig, cnvSm).attr({}); // the conveyor
 
-            //console.log(w)
+            var c_x = Number($("#cnvBig").attr("x")) + Number($("#cnvBig").attr("width")) / 2;
+            var c_y1 = Number($("#cnvBig").attr("y")) + Number($("#cnvBig").attr("height")) + 10; // for hand and proc
+            //s.circle(c_x, c_y, 10);
+
+            // LOWER SIDE
+
+            var hand = s.rect(c_x - 100, c_y1, s_width, s_height).attr({
+                id: "hand"
+            }); // handling station
+
+            var proc = s.rect($("#hand").attr("x"), Number($("#hand").attr("y")) + Number($("#hand").attr("height")) + 5,
+                s_width, s_height).attr({
+                id: "proc"
+            }); // processing station
+
+            //var c_y3 = ;// for test and dist
+            var test = s.rect(Number($("#cnvBig").attr("x")) + 40, c_y1, s_width, s_height).attr({
+                id: "test"
+            });
+
+            var dist = s.rect($("#test").attr("x"), Number($("#test").attr("y")) + Number($("#test").attr("height")) + 5,
+                s_width, s_height).attr({
+                id: "dist"
+            }); // processing station
+
+            //UPPER SIDE
+            c_y2 = Number($("#cnvBig").attr("y")) - 160; // - 10(spacing) - height_of_asrs// for asrs
+            var asrs = s.rect(c_x - 150, c_y2, 300, 150).attr({
+                id: "asrs"
+            }); //asrs station
+
+            //var c_x3 = ;
+            var robs = s.rect(x + width - 40 - s_width, 240, s_width, s_height).attr({
+                id: "robs"
+            }); // y + height / 2 - Number($("#bigRect").attr("height")) / 2 - 10 - s_height
+
+            var asse = s.rect($("#robs").attr("x"), $("#robs").attr("y") - s_height - 5, s_width, s_height).attr({
+                id: "asse"
+            });
+            var stor = s.rect($("#asse").attr("x"), $("#asse").attr("y") - s_height - 5, s_width, s_height).attr({
+                id: "stor"
+            });
+
+            //grid, upper line
+            var r = 10;
+            s.circle(x, y, r);
+            s.circle(x + width / 4, y, r);
+            s.circle(x + width / 2, y, r);
+            s.circle(x + width * 0.75, y, r);
+            s.circle(x + width, y, r);
+
+            //grid, middle line
+            s.circle(x, y + height / 2, r);
+            s.circle(x + width / 4, y + height / 2, r);
+            s.circle(x + width / 2, y + height / 2, r);
+            s.circle(x + width * 0.75, y + height / 2, r);
+            s.circle(x + width, y + height / 2, r);
+
+            //grid, lower line
+            s.circle(x, y + height, r);
+            s.circle(x + width / 4, y + height, r);
+            s.circle(x + width / 2, y + height, r);
+            s.circle(x + width * 0.75, y + height, r);
+            s.circle(x + width, y + height, r);
         });
     </script>
 </body>
