update before tweaking things

--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,13 @@
             var x, y, width, height;
             x = 0.1 * w;
             y = 0.1 * h;
-            width = 0.8 * w;
+            width = 0.8 * w; // 80% of available space
             height = 0.8 * h;
 
-            var s_width = 200;
-            var s_height = 100;
+            var s_width = 250; // station width
+            var s_height = 100; //station height
 
-            var bigRect = s.rect(x, y, width, height) //our stuff
+            var bigRect = s.rect(0, 0, w, h) //our stuff
                 .attr({
                     fill: "#9e9e9e",
                     stroke: "#125470",
@@ -37,10 +37,11 @@
                     opacity: 0.3
                 });
             //horizontal centre line
-            var cLine = s.line(x, y + bigRect.attr("height") / 2, x + width, y + height / 2).attr({
+            var cLine = s.line(x, y + height / 2, x + width, y + height / 2).attr({
                 stroke: "#000",
                 strokeWidth: 4,
-                id: "cline"
+                id: "cline",
+                opacity: 0
             }); // centre line. make invisible later
 
             var spread = 50;
@@ -59,52 +60,64 @@
                 ry: 15
             });
 
-            var cnv = s.group(cnvBig, cnvSm).attr({}); // the conveyor
-
-            var c_x = Number($("#cnvBig").attr("x")) + Number($("#cnvBig").attr("width")) / 2;
-            var c_y1 = Number($("#cnvBig").attr("y")) + Number($("#cnvBig").attr("height")) + 10; // for hand and proc
+            var c_x = Number(s.select("#cnvBig").attr("x")) + Number(s.select("#cnvBig").attr("width")) / 2;
+            var c_y1 = Number(s.select("#cnvBig").attr("y")) + Number(s.select("#cnvBig").attr("height")) + 10; // for hand and proc
             //s.circle(c_x, c_y, 10);
 
             // LOWER SIDE
 
             var hand = s.rect(c_x - 100, c_y1, s_width, s_height).attr({
-                id: "hand"
+                id: "hand",
+                fill: "#90A4AE"
             }); // handling station
 
             var proc = s.rect($("#hand").attr("x"), Number($("#hand").attr("y")) + Number($("#hand").attr("height")) + 5,
                 s_width, s_height).attr({
-                id: "proc"
+                id: "proc",
+                fill: "#90A4AE"
             }); // processing station
 
             //var c_y3 = ;// for test and dist
             var test = s.rect(Number($("#cnvBig").attr("x")) + 40, c_y1, s_width, s_height).attr({
-                id: "test"
+                id: "test",
+                fill: "#90A4AE"
             });
 
             var dist = s.rect($("#test").attr("x"), Number($("#test").attr("y")) + Number($("#test").attr("height")) + 5,
                 s_width, s_height).attr({
-                id: "dist"
+                id: "dist",
+                fill: "#90A4AE"
             }); // processing station
 
             //UPPER SIDE
             c_y2 = Number($("#cnvBig").attr("y")) - 160; // - 10(spacing) - height_of_asrs// for asrs
             var asrs = s.rect(c_x - 150, c_y2, 300, 150).attr({
-                id: "asrs"
+                id: "asrs",
+                fill: "#90A4AE"
             }); //asrs station
 
             //var c_x3 = ;
             var robs = s.rect(x + width - 40 - s_width, 240, s_width, s_height).attr({
-                id: "robs"
+                id: "robs",
+                fill: "#90A4AE"
             }); // y + height / 2 - Number($("#bigRect").attr("height")) / 2 - 10 - s_height
 
             var asse = s.rect($("#robs").attr("x"), $("#robs").attr("y") - s_height - 5, s_width, s_height).attr({
-                id: "asse"
+                id: "asse",
+                fill: "#90A4AE"
             });
             var stor = s.rect($("#asse").attr("x"), $("#asse").attr("y") - s_height - 5, s_width, s_height).attr({
-                id: "stor"
+                id: "stor",
+                fill: "#90A4AE"
             });
 
-            //grid, upper line
+            // GROUPS
+            var all = s.group(cnvBig, cnvSm, hand, proc, test, dist, asrs, robs, asse, stor);
+            var cnv = s.group(cnvBig, cnvSm).attr({}); // the conveyor
+            all.animate({
+                    y: "+=200"
+                }, 5000)
+                //grid, upper line
             var r = 10;
             s.circle(x, y, r);
             s.circle(x + width / 4, y, r);
