--- a/public/index.html
+++ b/public/index.html
@@ -8,25 +8,35 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg.js"></script>
 
-    <script></script>
+    <script>
+    </script>
 </head>
 
 <body>
+    <header>
+        <img src="./img/header.jpg" height="100px" width="100%">
+    </header>
     <script>
         $(document).ready(function() {
             h = window.screen.availHeight;
             w = window.screen.availWidth;
-            var s = Snap(w, h); //drawing board
+
+            var s = Snap(w, h + 200); //drawing board
             var x, y, width, height;
             x = 0.1 * w;
             y = 0.1 * h;
             width = 0.8 * w; // 80% of available space
             height = 0.8 * h;
+            console.log("width:", width)
+            console.log("height:", height)
+            console.log("width:", w)
+            console.log("height:", h)
 
             var s_width = 250; // station width
-            var s_height = 100; //station height
+            var s_height = 150; //station height
 
-            var bigRect = s.rect(0, 0, w, h) //our stuff
+            // var bigRect = s.rect(0, 0, w, h)
+            var bigRect = s.rect(0, 0, w, h + 200) //our stuff
                 .attr({
                     fill: "#9e9e9e",
                     stroke: "#125470",
@@ -37,7 +47,7 @@
                     opacity: 0.3
                 });
             //horizontal centre line
-            var cLine = s.line(x, y + height / 2, x + width, y + height / 2).attr({
+            var cLine = s.line(x, y + height / 2 + 150, x + width, y + height / 2 + 150).attr({ //mv dw hr
                 stroke: "#000",
                 strokeWidth: 4,
                 id: "cline",
@@ -64,6 +74,28 @@
             var c_y1 = Number(s.select("#cnvBig").attr("y")) + Number(s.select("#cnvBig").attr("height")) + 10; // for hand and proc
             //s.circle(c_x, c_y, 10);
 
+            //UPPER SIDE
+            c_y2 = Number($("#cnvBig").attr("y")) - 160; // - 10(spacing) - height_of_asrs// for asrs
+            var asrs = s.rect(c_x - 150, c_y2 - 100, 300, 250).attr({
+                id: "asrs",
+                fill: "#90A4AE"
+            }); //asrs station
+
+            //var c_x3 = ;
+            var robs = s.rect(x + width - 40 - s_width, $("#cnvBig").attr("y") - 160, s_width, s_height).attr({ //mv dw hr
+                id: "robs",
+                fill: "#90A4AE"
+            }); // y + height / 2 - Number($("#bigRect").attr("height")) / 2 - 10 - s_height
+
+            var asse = s.rect($("#robs").attr("x"), $("#robs").attr("y") - s_height - 5, s_width, s_height).attr({
+                id: "asse",
+                fill: "#90A4AE"
+            });
+            var stor = s.rect($("#asse").attr("x"), $("#asse").attr("y") - s_height - 5, s_width, s_height).attr({
+                id: "stor",
+                fill: "#90A4AE"
+            });
+
             // LOWER SIDE
 
             var hand = s.rect(c_x - 100, c_y1, s_width, s_height).attr({
@@ -87,29 +119,9 @@
                 s_width, s_height).attr({
                 id: "dist",
                 fill: "#90A4AE"
-            }); // processing station
+            }); // distribution station
 
-            //UPPER SIDE
-            c_y2 = Number($("#cnvBig").attr("y")) - 160; // - 10(spacing) - height_of_asrs// for asrs
-            var asrs = s.rect(c_x - 150, c_y2, 300, 150).attr({
-                id: "asrs",
-                fill: "#90A4AE"
-            }); //asrs station
 
-            //var c_x3 = ;
-            var robs = s.rect(x + width - 40 - s_width, 240, s_width, s_height).attr({
-                id: "robs",
-                fill: "#90A4AE"
-            }); // y + height / 2 - Number($("#bigRect").attr("height")) / 2 - 10 - s_height
-
-            var asse = s.rect($("#robs").attr("x"), $("#robs").attr("y") - s_height - 5, s_width, s_height).attr({
-                id: "asse",
-                fill: "#90A4AE"
-            });
-            var stor = s.rect($("#asse").attr("x"), $("#asse").attr("y") - s_height - 5, s_width, s_height).attr({
-                id: "stor",
-                fill: "#90A4AE"
-            });
 
             // GROUPS
             var all = s.group(cnvBig, cnvSm, hand, proc, test, dist, asrs, robs, asse, stor);
