Made progress. Fundamental graphic components available in each station

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <header>
-        <img src="./img/header.jpg" height="100px" width="100%">
+        <img src="" height="100px" width="100%">
     </header>
-    <script src="./graphic.js" type="text/javascript"></script>
+    <script src="./graphic.js" type="text/javascript" defer></script>
 
 </body>
 
