made very minor change

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,11 @@
 <body>
     <header>
         <img src="" height="100px" width="100%">
+        <nav></nav>
     </header>
     <script src="./graphic.js" type="text/javascript" defer></script>
 
+    <footer></footer>
 </body>
 
 </html>
