Added more details to processing station GUI

--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,26 @@
 <head>
     <title>DEMO FACTORY</title>
 
-    <!--link rel="stylesheet" type="text/css" href="" /-->
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg.js"></script>
+    <!--link rel="stylesheet" type="text/css" href="./styles.css" /-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab&display=swap" rel="stylesheet">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.2/velocity.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js" integrity=""></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg.js" integrity=""></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.2/velocity.min.js" integrity=""></script>
+    <script></script>
+    <script></script>
 </head>
 
 <body>
     <header>
         <img src="" height="100px" width="100%">
-        <nav></nav>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
     </header>
     <script src="./graphic.js" type="text/javascript" defer></script>
 
