--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>DEMO FACTORY</title>
 
-    <!--link rel="stylesheet" type="text/css" href="./styles.css" /-->
+    <link rel="stylesheet" type="text/css" href="./styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab&display=swap" rel="stylesheet">
 
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js" integrity=""></script>
