--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.2/velocity.min.js" integrity=""></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        
-        var socket = io()
-        var n = 0;
-        socket.on('connect', () => {
-            console.log('client side')
-        })
-        // chekn if statns can comm directly with front end. DID NOT
-        socket.on('hello', ()=>{
-            console.log('got hello', n)
-            n = n+1;
-        })
-    </script>
+    <script src="events.js"></script>
 </head>
 
 <body>
